# HW1_MLOPS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
src/: main.cpp
tests/: check_mac.py
